--- a/src/style/components/ProjectIdentity.scss
+++ b/src/style/components/ProjectIdentity.scss
@@ -17,6 +17,8 @@
   }
 
   &__details {
+    overflow: hidden;
+    
     h2 {
       font-size: $size-9;
     }
